--- a/Basheer Restuarant.html
+++ b/Basheer Restuarant.html
@@ -1,7 +1,7 @@
 <!Doctype HTML>
 <html>
      <head>
-           <title>Basheer Restuarant</title>
+           <title>Alisha Restuarant</title>
      </head>
      <body>
           
