--- a/image.html
+++ b/image.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="../demo.html" target="_blank">click on the demo.html</a><br>
-    <a href="../resume.html" target="_blank">click on the resume.html</a><br>
-    <a href="../Basheer Restuarant.html" target="_blank">click on the reastuarant.html</a><br>
-    <a href="../photo.jpeg" target="_blank">click on the photo.html</a>
+    <a href="demo.html" target="_blank">click on the demo.html</a><br>
+    <a href="resume.html" target="_blank">click on the resume.html</a><br>
+    <a href="Basheer Restuarant.html" target="_blank">click on the reastuarant.html</a><br>
+    <a href="photo.jpeg" target="_blank">click on the photo.html</a>
 </body>
 </html>
