--- a/image1.html
+++ b/image1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+Task-1
       <CENTER><h1>FRONTEND</h1></CENTER>
       <hr>
       <div>
@@ -46,6 +47,36 @@
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="./nodejs.png" download="NODEJS-1"><img src="./OIP.jpeg" width="40" alt=""></a>
       </div>
+
+Task-2
+<center>BOOK MARKING</center>
+<hr>
+<center><a href="">Objective</a>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="">Education</a>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="">Skills</a>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="">Interests</a></center>
+
+<h><u>Objective</u></h>
+<p>To obtain an entry-level position in the software industry where I can apply my programming and problem-solving skills while learning from experienced professionals.</p>
+<h><u>Education</u></h>
+<p> <pre>
+          Graduate      Santhiram Engineering College                        CGPA: 7.5        year-2025
+          Intermediate  Nucleus junior college                               Marks:928        year-2021
+          SSC           Geethanjali Model School                             CGPA:9.5         year-2019
+     </pre></p>
+<h><u>Skills</u></h>
+     <p>1.HTML</p>
+     <p>2.CSS</p>
+     <p>3.PYTHON</p>
+     <p>4.SQL</p>
+     <p>5.SAP</p>
+<h><u>Interests</u></h>
+<p>1.Playing Games</p>
+<p>2.Travelling</P>
+<p>3.Learning New Skills</P>
 
       
 
