--- a/image1.html
+++ b/image1.html
@@ -51,29 +51,29 @@ Task-1
 Task-2
 <center>BOOK MARKING</center>
 <hr>
-<center><a href="">Objective</a>
+<center><a href="#Objective">Objective</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="">Education</a>
+<a href="#Education">Education</a>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="">Skills</a>
+<a href="#Skills">Skills</a>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="">Interests</a></center>
+<a href="#Interests">Interests</a></center>
 
-<h><u>Objective</u></h>
+<h id="Objective"> Objective</h3>
 <p>To obtain an entry-level position in the software industry where I can apply my programming and problem-solving skills while learning from experienced professionals.</p>
-<h><u>Education</u></h>
+<h id="Education">Education</h>
 <p> <pre>
           Graduate      Santhiram Engineering College                        CGPA: 7.5        year-2025
           Intermediate  Nucleus junior college                               Marks:928        year-2021
           SSC           Geethanjali Model School                             CGPA:9.5         year-2019
      </pre></p>
-<h><u>Skills</u></h>
+<h id="Skills">Skills</h>
      <p>1.HTML</p>
      <p>2.CSS</p>
      <p>3.PYTHON</p>
      <p>4.SQL</p>
      <p>5.SAP</p>
-<h><u>Interests</u></h>
+<h id="Interests">Interests</h>
 <p>1.Playing Games</p>
 <p>2.Travelling</P>
 <p>3.Learning New Skills</P>
