--- a/list.html
+++ b/list.html
@@ -13,5 +13,51 @@
       <img src="./youtube.png" width="40" alt="youtube">
     </a>
   </center>
+
+  <hr>
+  lists:<br>
+   1.Ordered list:
+    <ol type="I">
+        <li>basheer</li>
+        <li>srinu</li>
+        <li>abdulla</li>
+        <li>sai kiran</li>
+    </ol>
+    <ol type="a">
+        <li>chicken</li>
+        <li>mutton</li>
+        <li>egg</li>
+    </ol>
+2.Unordered list:
+ <ul type="square">
+    <li>bike</li>
+    <li>taxi</li>
+    <li>metro</li>
+    <li>train</li>
+ </ul>
+ <ul type="circle">
+    <li>cricket</li>
+    <li>kabbadi</li>
+    <li>kho-kho</li>
+ </ul>
+
+ 3.Nested list:
+ <dl>
+    <dt>Python:</dt>
+    <dd>Python is a high-level, easy-to-learn programming language used for web development, data analysis, automation, and AI.
+        It has a simple syntax similar to English, making it great for beginners.
+        Python is widely used by companies like Google, NASA, and Netflix.</dd>
+    <dd><img src="./python.jpeg" width="40"></dd>   
+
+ </dl>
+ <dl>
+    <dt>Java:</dt>
+    <dd>Java is a powerful, object-oriented programming language used to build desktop, web, and mobile applications.
+        It's platform-independent, meaning code written in Java can run on any system with the Java Virtual Machine (JVM).
+        Java is known for its speed, reliability, and use in large-scale enterprise systems.</dd>
+    <dd><img src="./java.jpeg" width="40"></dd>    
+ </dl>
+
+     
 </body>
 </html>
