--- a/songs.html
+++ b/songs.html
@@ -31,7 +31,7 @@
       <audio controls autoplay muted loop>
         <source src="./songs/[iSongs.info] 04 - Kopama Napina.mp3">
       </audio><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="[iSongs.info] 04 - Kopama Napina.mp3" download="download">
+      <a href="[iSongs.info] 02 - Inka Eedo.mp3" download="download">
         <img src="./OIP.jpeg" width="40">
       </a>
     </details>
@@ -42,7 +42,7 @@
       <audio controls autoplay muted loop>
         <source src="./songs/[iSongs.info] 03 - Sooreede.mp3">
       </audio><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="[iSongs.info] 03 - Sooreede.mp3" download="download">
+      <a href="[iSongs.info] 02 - Inka Eedo.mp3" download="download">
         <img src="./OIP.jpeg" width="40">
       </a>
     </details>
